--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "axios": "^0.19.0",
     "colors": "^1.3.2",
     "commitizen": "^3.0.0",
+    "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "coveralls": "^3.0.2",
