--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@types/jest": "^23.3.2",
     "@types/node": "^10.11.0",
     "@types/qs": "^6.5.3",
+    "atob": "^2.1.2",
     "axios": "^0.19.0",
     "colors": "^1.3.2",
     "commitizen": "^3.0.0",
