--- a/package.json
+++ b/package.json
@@ -51,6 +51,11 @@
     "transform": {
       ".(ts|tsx)": "ts-jest"
     },
+    "globals": {
+      "ts-jest": {
+        "diagnostics": false
+      }
+    },
     "testEnvironment": "jsdom",
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "moduleFileExtensions": [
