--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "files": [
     "dist"
   ],
-  "author": "ghostratel <1353640486@qq.com>",
+  "author": "wicked-knife <1353640486@qq.com>",
   "repository": {
     "type": "git",
     "url": ""
